--- a/appsec.yml
+++ b/appsec.yml
@@ -5,13 +5,13 @@ files:
     destination: /var/www/nodejs
 file_exists_behavior: OVERWRITE
 hooks:
-  # BeforeInstall:
-  #   - location: scripts/before_install.sh
-  #     timeout: 300
-      # runas: ubuntu
-  AfterInstall:
-    - location: scripts/install.sh
+  BeforeInstall:
+    - location: scripts/before_install.sh
       timeout: 300
+      runas: ubuntu
+  # AfterInstall:
+  #   - location: scripts/install.sh
+  #     timeout: 300
       # runas: ubuntu
   ApplicationStart:
     - location: scripts/application_start.sh
