--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,8 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - npm install
+      - npm install 
+      #-f --unsafe-perm=true --allow-root
   post_build:
     commands:
       - echo build completed
